<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:id="@+id/international_map_fragment"
    tools:context=".maps.InternationalMapFragment">

    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/internationalMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraTargetLat="28.0339"
            mapbox:mapbox_cameraTargetLng="1.6596"
            mapbox:mapbox_cameraZoom="2.00"
            />




</LinearLayout>